fix flex wrap on home page

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -170,9 +170,9 @@ ol li {
 
 
 .boxrow {
-  display: flex;
+  display:flex;
+  flex-wrap: wrap;
 }
 
 .boxcolumn {
-  flex: 50%;
 }
